--- a/src/index.css
+++ b/src/index.css
@@ -119,6 +119,10 @@ button {
   background-image: url(./assets/images/battle/detail-btn.png);
 }
 
+.scratch{
+  background-image: url(./assets/images/lucky/scratch-btn.png);
+}
+
 
 
 
@@ -201,4 +205,12 @@ button {
 }
 .scroll{
   overflow-y: scroll !important;
+}
+
+.image-bg-100{
+  background-size: 100% 100%;
+}
+.no-repeat{
+  background-repeat: no-repeat;
+
 }
