--- a/src/styles/talentTour.scss
+++ b/src/styles/talentTour.scss
@@ -1,4 +1,11 @@
 .talent-tours {
+
+  .tour-rec-btn{
+    position: relative;
+    top: 28vw;
+    z-index: 1;
+    right: -40vw;
+  }
   .space-game {
     width: 90%;
     min-height: 270vw;
