--- a/src/styles/custom-radio.scss
+++ b/src/styles/custom-radio.scss
@@ -3,11 +3,10 @@
     width: 16vw;
     height: 16vw;
     background-size: 100% 100%;
-    background-color: none !important;
 
     position: relative;
 
-    img{
+    .radio-img{
         width: 10vw;
         position: absolute;
         left: 3vw;
