--- a/src/styles/event-gifting.scss
+++ b/src/styles/event-gifting.scss
@@ -1,7 +1,6 @@
 .event-gifting-popup{
     position: fixed;
     top: 0;
-    left: 4vw;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
@@ -35,6 +34,7 @@
         position: relative;
         background-image: url('../assets/images/event-gifting/main-section-bg.png');
         position: relative;
+        margin: 0 auto;
     
 
         .title{
