--- a/src/styles/gift.scss
+++ b/src/styles/gift.scss
@@ -5,18 +5,39 @@
     background-size: 100% 100%;
     position: relative;
 
-    img {
+    .gift-img {
       position: absolute;
       width: 12vw;
       top: 7vw;
       left: 4vw;
     }
-    span {
+
+
+    .priceNText{
+      left: 1vw;
+      // border: 1px solid;
+      width: 20vw;
       position: absolute;
       font-size: 2.5vw;
       color: white;
       top: 24vw;
       font-family: "PoppinsMedium";
-      left: 3vw;
+      .name{
+       font-size: 2.8vw;
+      }
+      .price{
+        .price-text{
+        font-size: 2.5vw;
+        }
+        .bean-img{
+          width: 4vw;
+        }
+
+      }
+
+
+
     }
+
+
   }
