--- a/src/styles/battle-tab.scss
+++ b/src/styles/battle-tab.scss
@@ -121,22 +121,22 @@
       }
     }
 
-    .battle-game::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%; /* Cover the entire container */
-      height: 100%; /* Cover the entire container */
+    // .battle-game::before {
+    //   content: "";
+    //   position: absolute;
+    //   top: 0;
+    //   left: 0;
+    //   width: 100%; /* Cover the entire container */
+    //   height: 100%; /* Cover the entire container */
 
-      z-index: 1; /* Ensure the overlay is behind the content */
-    }
+    //   z-index: 1; /* Ensure the overlay is behind the content */
+    // }
 
-    .content {
-      position: relative;
-      z-index: 2; /* Set a higher z-index to place it above the overlay */
-      /* Other styles for your content */
-    }
+    // .content {
+    //   position: relative;
+    //   z-index: 2; /* Set a higher z-index to place it above the overlay */
+    //   /* Other styles for your content */
+    // }
 
     .play-btns {
       display: flex;
@@ -144,6 +144,21 @@
       top: 15vw;
       justify-content: space-around;
       color: white;
+    }
+    .play-btn{
+      background-size: 100% 100%;
+    background-repeat: no-repeat;
+    border: none;
+    background-color: transparent;
+    width: 30vw;
+    height: 10vw;
+    background-image: url(../assets/images/battle/play-btn.png);
+    position: relative;
+    top: 19vw;
+
+
+
+
     }
     .battles-won-count {
       background-image: url(../assets/images/battle/battles-won-bar.png);
