--- a/src/styles/lucky-player.scss
+++ b/src/styles/lucky-player.scss
@@ -271,6 +271,28 @@
          overflow: hidden;
          height: 151vw;
         }
+
+        .last-lucky-rest-wins::-webkit-scrollbar {
+          width: 1vw;
+          background-color: gray;
+        }
+      
+        /* Track */
+        .last-lucky-rest-wins::-webkit-scrollbar-track {
+          box-shadow: inset 0 0 5px grey;
+          border-radius: 1vw;
+        }
+      
+        /* Handle */
+        .last-lucky-rest-wins::-webkit-scrollbar-thumb {
+          background: white;
+          border-radius: 2vw;
+        }
+      
+        /* Handle on hover */
+        .last-lucky-rest-wins::-webkit-scrollbar-thumb:hover {
+          background: #b30000;
+        }
       }
     }
 
