--- a/src/styles/talentTour.scss
+++ b/src/styles/talentTour.scss
@@ -447,6 +447,31 @@
       height: 151vw;
       position: relative;
       top: 15vw;
+      width: 90%;
+      left: 3vw;
+    }
+
+    
+    .lb-restWinners::-webkit-scrollbar {
+      width: 1vw;
+      background-color: gray;
+    }
+  
+    /* Track */
+    .lb-restWinners::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 5px grey;
+      border-radius: 1vw;
+    }
+  
+    /* Handle */
+    .lb-restWinners::-webkit-scrollbar-thumb {
+      background: white;
+      border-radius: 2vw;
+    }
+  
+    /* Handle on hover */
+    .lb-restWinners::-webkit-scrollbar-thumb:hover {
+      background: #b30000;
     }
     .seeMore {
       position: relative;
